--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -193,11 +193,11 @@ p {
 
 .menu__linkHeader {
   padding-left: 2vw;
-  -webkit-text-fill-color: none;
+  // -webkit-text-fill-color: none;
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: var(--primary-colour);
   -webkit-text-stroke: solid;
-  color: var(--secondary-colour);
+  color: transparent;
 }
 
 .menu__linkHeader--active {
@@ -210,12 +210,13 @@ p {
 }
 
 .menu__linkHeader:hover {
-  -webkit-text-fill-color: var(--primary-colour);
-  -webkit-text-stroke-width: 0px;
-  -webkit-text-stroke-color: none;
+  // -webkit-text-fill-color: var(--primary-colour);
+  color: var(--primary-colour);
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: transparent;
   -webkit-text-stroke: solid;
-  -webkit-transition: 800ms ease-in-out;
-  transition: 800ms ease-in-out;
+  -webkit-transition: all 800ms ease-in-out;
+  transition: all 800ms ease-in-out;
 }
 
 
@@ -495,6 +496,10 @@ p {
   color: var(--secondary-colour) !important;
 }
 
+// .light {
+//   color: var(--primary-colour);
+// }
+
 .secondaryColourDivider {
   height: 1px;
   width: auto;
@@ -624,6 +629,15 @@ p {
   color: var(--secondary-colour);
 }
 
+.contact--light {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: auto;
+  // gap: 2em;
+  color: var(--secondary-colour);
+}
+
 .contact {
   display: flex;
   flex-direction: column;
@@ -631,6 +645,10 @@ p {
   height: auto;
   // gap: 2em;
   color: var(--secondary-colour);
+
+  &__method--light {
+    color: var(--secondary-colour) !important;
+  } 
 
   &__description {
     color: var(--secondary-colour);
